gateway/authswap-sasl-oauth-sasl-oauth/gateway.yaml
apiVersion: platform.confluent.io/v1beta1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: confluent-for-kubernetes
    app.kubernetes.io/managed-by: kustomize
  name: confluent-gateway
spec:
  replicas: 3
  image:
    application: confluentinc/cpc-gateway:1.3.0-1-ubi9
    init: confluentinc/confluent-init-container:3.1.0
  secretStores:
    - name: file-store
      provider:
        type: File
        configSecretRef: file-store-config
        clientCredentialsRef: file-store-client-credentials
  streamingDomains:
    - name: oauth-kafka
      type: kafka
      kafkaCluster:
        bootstrapServers:
          - id: OAUTH
            endpoint: broker:9093
        nodeIdRanges:
          - name: pool-1
            start: 1
            end: 3
  routes:
    - name: swap-oauth-oauth-route
      endpoint: gateway.example.com:9595
      brokerIdentificationStrategy:
        type: port
      streamingDomain:
        name: oauth-kafka
        bootstrapServerId: OAUTH
      security:
        auth: swap
        secretStore: file-store
        client:
          authentication:
            type: oauth
            jaasConfigPassThrough:
              secretRef: client-oauth-jaas
            oauthSettings:
              jwksEndpointUri: <client_jwks_endpoint_url>
              expectedIssuer: <client_expected_issuer>
              audience: <client_audience>
              subClaimName: sub
        cluster:
          authentication:
            type: oauth
            jaasConfigPassThrough:
              secretRef: oauth-jaas
            oauthSettings:
              tokenEndpointUri: <cluster_token_endpoint_url>
  podTemplate:
    envVars:
      - name: GATEWAY_OPTS
        value: "-Dorg.apache.kafka.sasl.oauthbearer.allowed.urls=<client_jwks_endpoint_url>,<cluster_token_endpoint_url>"
  externalAccess:
    type: loadBalancer
    loadBalancer:
      domain: gateway.example.com
